--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -54,20 +54,16 @@
     <CustomAction Id="ActivatePlugin" BinaryKey="managedAction" DllEntry="ActivatePlugin" Execute="immediate" Return="check" />
     <CustomAction Id="SetInstallElasticSearchProperties" Property="InstallElasticSearch" Value="ESPATH=[ELASTICSEASRCHINSTALLFOLDER];OFPATH=[INSTALLFOLDER]"></CustomAction>
     <CustomAction Id="InstallElasticSearch" BinaryKey="managedAction" DllEntry="InstallElasticSearch" Execute="deferred" Impersonate="no" Return="check" />
-    <CustomAction Id="UnInstallElasticSearch" BinaryKey="managedAction" DllEntry="UnInstallElasticSearch" Execute="deferred" Impersonate="no" Return="check" />
     <CustomAction Id="CheckVersion" BinaryKey="managedAction" DllEntry="CheckVersion" Execute="immediate" Return="check" />
     <CustomAction Id="InstallRules" BinaryKey="managedAction" DllEntry="InstallRules" Execute="immediate" Return="check"></CustomAction>
-    <CustomAction Id="UninstallRules" BinaryKey="managedAction" DllEntry="UninstallRules" Execute="immediate" Return="check"></CustomAction>
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
       <Custom Action="RegisterDll" After="SelfRegModules">NOT Installed</Custom>
       <Custom Action="ResetRegistry" After="RegisterDll">NOT Installed</Custom>
       <Custom Action="UnregisterDll" After="SelfUnregModules">Installed</Custom>
       <Custom Action="CheckVersion" Before="InstallInitialize" />
-      <Custom Action="UnInstallElasticSearch" After="UnregisterDll">Installed</Custom>
-      <Custom Action="Deactivate" Before="InstallInitialize">Installed</Custom>
-      <Custom Action="UninstallRules" After="Deactivate">Installed</Custom>
-      <Custom Action="StopServiceApp" After="UninstallRules">Installed</Custom>
+      <Custom Action="Deactivate" Before="InstallValidate">Installed  OR REMOVE="ALL"</Custom>
+      <!--<Custom Action="StopServiceApp" After="UninstallRules">Installed</Custom>-->
       <Custom Action="DeleteFiles" After="InstallFinalize">REMOVE="ALL"</Custom>
       <Custom Action="SetInstallElasticSearchProperties" Before="InstallFinalize">NOT Installed</Custom>
       <Custom Action="InstallElasticSearch" After="SetInstallElasticSearchProperties">NOT Installed</Custom>
