--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:fire="http://schemas.microsoft.com/wix/FirewallExtension">
-  <Product Id="*" Name="OutlookFinder" Language="1033" Version="1.0.3.1165" Manufacturer="FruitFactory" UpgradeCode="602854f0-ede9-4eba-bd8c-b6f91822510a" Codepage="1252">
+  <Product Id="*" Name="OutlookFinder" Language="1033" Version="1.0.3.1178" Manufacturer="FruitFactory" UpgradeCode="602854f0-ede9-4eba-bd8c-b6f91822510a" Codepage="1252">
     <Package InstallerVersion="200" Compressed="yes" Description="OutlookFinder" Manufacturer="FruitFactory" Languages="1033" SummaryCodepage="1252" InstallScope="perUser" InstallPrivileges="limited" />
     <!--<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." AllowDowngrades="no" />-->
     <Upgrade Id="602854f0-ede9-4eba-bd8c-b6f91822510a">
@@ -245,6 +245,7 @@
         <File Id="_OF_Preview_dll_config" Name="OF.Preview.dll.config" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_OF_Infrastructure_dll" Name="OF.Infrastructure.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_OF_Module_dll" Name="OF.Module.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
+        <File Id="_OF_Module_dll_config" Name="OF.Module.dll.config" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Html_Agility_Pack_dll" Name="HtmlAgilityPack.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_OF_Core_dll" Name="OF.Core.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Turbo_Activate_dat" Name="TurboActivate.dat" Source="$(var.OF.OutlookPlugin.TargetDir)" />
