--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -51,7 +51,6 @@
     <CustomAction Id="CancelMessage" BinaryKey="managedAction" DllEntry="CancelMessage" Execute="immediate" Return="check" />
     <CustomAction Id="ErrorMessage" BinaryKey="managedAction" DllEntry="ErrorMessage" Execute="immediate" Return="check" />
     <CustomAction Id="ClosePrompt" BinaryKey="managedAction" DllEntry="ClosePrompt" Execute="immediate" Return="check" />
-    <CustomAction Id="ActivatePlugin" BinaryKey="managedAction" DllEntry="ActivatePlugin" Execute="immediate" Return="check" />
     <CustomAction Id="SetInstallElasticSearchProperties" Property="InstallElasticSearch" Value="ESPATH=[ELASTICSEASRCHINSTALLFOLDER];OFPATH=[INSTALLFOLDER]"></CustomAction>
     <CustomAction Id="InstallApp" BinaryKey="managedAction" DllEntry="InstallApp" Execute="immediate" Return="check" />
     <CustomAction Id="CheckVersion" BinaryKey="managedAction" DllEntry="CheckVersion" Execute="immediate" Return="check" />
@@ -62,9 +61,9 @@
       <Custom Action="ResetRegistry" After="RegisterDll">NOT Installed</Custom>
       <Custom Action="UnregisterDll" After="SelfUnregModules">Installed</Custom>
       <Custom Action="CheckVersion" Before="InstallInitialize" />
-      <Custom Action="Deactivate" Before="InstallValidate">Installed  OR REMOVE="ALL"</Custom>
+      <Custom Action="Deactivate" Before="InstallValidate">Installed OR REMOVE="ALL"</Custom>
       <!--<Custom Action="StopServiceApp" After="UninstallRules">Installed</Custom>-->
-      <Custom Action="DeleteFiles" After="InstallFinalize">REMOVE="ALL"</Custom>
+      <Custom Action="DeleteFiles" After="InstallFinalize">Installed OR REMOVE="ALL"</Custom>
       <Custom Action="SetInstallElasticSearchProperties" Before="InstallFinalize">NOT Installed</Custom>
       <!--<Custom Action="InstallElasticSearch" After="SetInstallElasticSearchProperties">NOT Installed</Custom>-->
       <Custom Action="StartServiceApp" After="InstallFinalize">NOT Installed</Custom>
