--- a/OF.OutlookFinderSetup/Bundle.wxs
+++ b/OF.OutlookFinderSetup/Bundle.wxs
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:bal="http://schemas.microsoft.com/wix/BalExtension" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
   <?define LibsDir="$(var.SolutionDir)/Toolkits/WixWPF/" ?>
-  <Bundle Name="OutlookFinder" Version="1.0.3.1214" Manufacturer="FruitFactory" UpgradeCode="DC120454-63AF-4DAA-87EC-215FECCA4A64" IconSourceFile="Image\logo_64.ico" DisableModify="yes" DisableRemove="yes">
+  <Bundle Name="OutlookFinder" Version="1.0.3.1227" Manufacturer="FruitFactory" UpgradeCode="DC120454-63AF-4DAA-87EC-215FECCA4A64" IconSourceFile="Image\logo_64.ico" DisableModify="yes" DisableRemove="yes">
     <BootstrapperApplicationRef Id="ManagedBootstrapperApplicationHost">
       <Payload SourceFile="BootstrapperCore.config" />
       <Payload SourceFile="$(var.LibsDir)WixWPF.dll" />
@@ -11,8 +11,11 @@
     <util:RegistrySearch Root="HKLM" Key="SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment" Value="CurrentVersion" Variable="JavaCurrentVersionWow" Win64="yes" />
     <Chain>
       <PackageGroupRef Id="NetFx40ClientWeb" />
-      <ExePackage Id="JavaRuntime" Name="JavaRuntime" DownloadUrl="http://javadl.sun.com/webapps/download/AutoDL?BundleId=111687" DetectCondition="(JavaCurrentVersion&gt;=&quot;1.8&quot; OR JavaCurrentVersionWow&gt;=&quot;1.8&quot;)" InstallCommand="/s" Cache="no" Compressed="no" PerMachine="yes" Permanent="yes" Vital="yes" SuppressSignatureVerification="yes">
-        <RemotePayload ProductName="jre-8u65-windows-i586.exe" Description="Java Platform SE binary" Size="50130016" Version="8.0.650.17" Hash="5e0b4ef55faf1de9b4b85d769bfe0899481c5d79" />
+      <ExePackage Id="JavaRuntime86" Name="JavaRuntime86" DownloadUrl="http://javadl.oracle.com/webapps/download/AutoDL?BundleId=216432" InstallCondition="NOT VersionNT64 AND ((JavaCurrentVersion&lt;=&quot;1.8&quot;) OR (JavaCurrentVersionWow&lt;=&quot;1.8&quot;))" InstallCommand="/s" Cache="no" Compressed="no" PerMachine="yes" Permanent="yes" Vital="yes" SuppressSignatureVerification="yes">
+        <RemotePayload ProductName="jre-8u111-windows-i586.exe" Description="Java Platform SE binary x86" Size="56134208" Version="8.0.1110.14" Hash="11D6A333A6D1B939A4D40082A4ACAB737071A7B8" />
+      </ExePackage>
+      <ExePackage Id="JavaRuntime64" Name="JavaRuntime64" DownloadUrl="http://javadl.oracle.com/webapps/download/AutoDL?BundleId=216434" InstallCondition="VersionNT64 AND ((JavaCurrentVersion&lt;=&quot;1.8&quot;) OR (JavaCurrentVersionWow&lt;=&quot;1.8&quot;))" InstallCommand="/s" Cache="no" Compressed="no" PerMachine="yes" Permanent="yes" Vital="yes" SuppressSignatureVerification="yes">
+        <RemotePayload ProductName="jre-8u111-windows-x64.exe" Description="Java Platform SE binary x64" Size="63235648" Version="8.0.1110.14" Hash="12E9492F2F2066F5B9187ED00995EDE95491C445" />
       </ExePackage>
       <RollbackBoundary Id="Rollback"></RollbackBoundary>
       <MsiPackage Id="OutlookFinder" SourceFile="$(var.TargetDir)\OutlookFinder.msi" DisplayName="OutlookFinder" Visible="yes" DisplayInternalUI="yes" Vital="yes"></MsiPackage>
