added dif fixes for suggesting.

--- a/WSUI.Module/View/Settings/ElasticSearchRiverSettingsView.xaml
+++ b/WSUI.Module/View/Settings/ElasticSearchRiverSettingsView.xaml
@@ -154,7 +154,9 @@
         
         <Label 
             Margin="3" 
-            Grid.Row="2">
+            Grid.Row="2"
+            Background="Red"
+            Foreground="White">
             These changes will take effect when you restart your computer.</Label>
     </Grid>
 
