--- a/WSUI.Module/View/Windows/OFEmailSuggestWindow.xaml
+++ b/WSUI.Module/View/Windows/OFEmailSuggestWindow.xaml
@@ -8,6 +8,8 @@
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:local="clr-namespace:OF.Module.View.Windows"
              xmlns:behaviors="clr-namespace:OF.Infrastructure.Behaviors;assembly=OF.Infrastructure"
+             xmlns:behaviors2="clr-namespace:OF.Module.Service.Behaviors"
+             xmlns:service="clr-namespace:OF.Module.Service"
              ShowMinButton="False"         
              ShowCloseButton="False"
              ShowMaxRestoreButton="False"
@@ -15,6 +17,68 @@
              Width="350" Height="200" 
              MinWidth="150" MinHeight="150"
              >
+    <Controls:MetroWindow.Resources>
+
+        <DataTemplate x:Key="NameTemplate" >
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Column="0">
+          <Run Text="{Binding FirstName}"></Run>
+          <Run Text="{Binding LastName}"></Run>
+                </TextBlock>
+
+                <TextBlock Grid.Column="1" Margin="2 0 0 0">
+          <Run Text="("></Run>
+          <Run Text="{Binding EmailAddress1}"></Run>
+          <Run Text=")"></Run>
+                </TextBlock>
+
+            </Grid>
+        </DataTemplate>
+
+
+        <DataTemplate x:Key="EmailTemplate">
+            <Grid>
+                <TextBlock Text="{Binding EmailAddress1}"></TextBlock>
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EmailContactTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Grid.Column="0">
+                    <Run Text="{Binding ContactName}"></Run>
+                </TextBlock>
+
+                <TextBlock Grid.Column="1" Margin="2 0 0 0">
+                  <Run Text="("></Run>
+                  <Run Text="{Binding EMail}"></Run>
+                  <Run Text=")"></Run>
+                </TextBlock>
+
+            </Grid>
+        </DataTemplate>
+
+
+
+        <service:OFEmailSuggestingTemplateSelector 
+          x:Key="EmailSuggestingTemplateSelector"
+          ContactNameTemplate="{StaticResource NameTemplate}"
+          ContactEmailTemplate="{StaticResource EmailTemplate}"
+          EmailContactTemplate="{StaticResource EmailContactTemplate}"
+      
+      ></service:OFEmailSuggestingTemplateSelector>
+
+
+    </Controls:MetroWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
@@ -23,7 +87,11 @@
 
         <ListBox ItemsSource="{Binding Emails,UpdateSourceTrigger=PropertyChanged}"
                  SelectedItem="{Binding SelectedItem,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                 ItemTemplateSelector="{StaticResource EmailSuggestingTemplateSelector}"
                  >
+            <i:Interaction.Behaviors>
+                <behaviors2:OFListBoxAutoScrollBehavior></behaviors2:OFListBoxAutoScrollBehavior>
+            </i:Interaction.Behaviors>
         </ListBox>
 
 
